Removed oAuth Token

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                             </div>
                             <div class="form-group clearfix">
                                 <input type="hidden" id="repoName" value="" />
-                                <input type="hidden" id="accessToken" value="5acd719e2f8f1d5f00f66458ef8b7187f9bbd424" />
+                                <input type="hidden" id="accessToken" value="" />
                                 <input type="button" id="create_issue_submit" class="btn btn-success pull-right" value="Submit new issue" />
                             </div>
                         </form>
